--- a/sarah.client/package.json
+++ b/sarah.client/package.json
@@ -15,21 +15,24 @@
   "dependencies": {
     "@angular/animations": "^17.3.0",
     "@angular/common": "^17.3.0",
-    "@angular/compiler": "^17.3.0",
+    "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.0",
     "@angular/forms": "^17.3.0",
-    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.0",
-    "@angular/router": "^17.3.0",
+    "@angular/router": "^17.3.12",
+    "@rollup/rollup-win32-x64-msvc": "^4.21.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "jest-editor-support": "*",
+    "run-script-os": "*",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "jest-editor-support": "*",
-    "run-script-os": "*"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "^17.3.8",
+    "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
