--- a/sarah.client/angular.json
+++ b/sarah.client/angular.json
@@ -23,6 +23,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
+            "sourceMap": true,
             "outputPath": "dist/sarah.client",
             "index": "src/index.html",
             "browser": "src/main.ts",
